--- a/TrainByWayne-master/apps/first_app/static/css/business-casual.css
+++ b/TrainByWayne-master/apps/first_app/static/css/business-casual.css
@@ -163,8 +163,11 @@ hr.divider {
 
     /* styling for the cart/ confirmation */
     .confirm{
-      padding: 15rem 0;
-      background-color: white;
+      color: white;
+      padding: 0 0;
+      background-color: grey;
+      opacity: 1;
+      padding-bottom: 20vh;
     }
 
     .row{
@@ -178,4 +181,74 @@ hr.divider {
       display:block;
       text-align: center;
     }
+
+    .container{
+      position: relative;
+    }
   
+    .proceed{
+      position: absolute;
+      bottom: 0px;
+      right: 50px;
+      border: none;
+    }
+
+ 
+
+    /* .proceed__btn, proceed__btn:link, proceed__btn:visited{
+      text-decoration: none;
+      text-transform: uppercase;
+      box-shadow: 0 5px 10px rgba(0, 0, 0, 0.4);
+      transition: all .2s;
+    }
+    .proceed__btn:hover{
+      color: green;
+      transform: scale(1.2);
+      cursor: pointer;
+    }
+    .proceed__btn:active, .proceed__btn:focus .proceed:visited{
+      text-decoration: none;
+      transform: scale(1.1);
+      box-shadow: 0 2.5px 5px rgba(0, 0, 0, 0.4);
+      border: none;
+    }
+
+    .proceed__btn:focus{
+      transform: scale(1.1);
+      box-shadow: 0 2.5px 5px rgba(0, 0, 0, 0.4);
+      border: none !important; */
+    /* } */
+
+    .col-md-6{
+      position: relative;
+    }
+
+    .package__price{
+      position: absolute;
+      bottom: 40px;
+      right: 50px;
+    }
+    
+        /*animations*/
+    
+        @keyframes moveInRight {
+          /* these percentages represent what happens at eat point of the animation */
+          0%{
+              opacity: 0;
+              transform: translateX(300px);
+          }
+      
+          80%{
+              transform: translateX(-20px);
+          }
+      
+          100%{
+              opacity: 1;
+              transform: translateX(0);
+          }
+      }
+
+    .item__details{
+      display: block;
+      animation: moveInRight 1s ease-in-out;
+    }
